--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   infinite_scroll_pagination: ^4.1.0
   shimmer_animation: ^2.2.2
   flutter_svg: ^2.0.17
+  youtube_player_flutter: ^9.1.1
 
 dev_dependencies:
   flutter_test:
