--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,10 @@ dependencies:
   shimmer_animation: ^2.2.2
   flutter_svg: ^2.0.17
   youtube_player_flutter: ^9.1.1
+  equatable:
+
+dependency_overrides:
+  flutter_svg: ^2.0.17
 
 dev_dependencies:
   flutter_test:
